--- a/03-frontend/angular-ecommerce/package.json
+++ b/03-frontend/angular-ecommerce/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^18.0.0",
     "angular-ecommerce": "file:",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
+    "schematics-scss-migrate": "^2.3.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
